--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             /*width: 600px;*/
             /*height: 400px;*/
             /*margin: 0 auto;*/
+            margin-left: 38px;
             /*border: 1px solid dimgray;*/
         }
 
@@ -21,16 +22,24 @@
         }
 
         .drop-box {
-            width: 600px;
-            height: 400px;
+            width: 200px;
+            height: 300px;
             /*margin: 0 auto;*/
             border: 1px solid dimgray;
+
         }
 
         .preview img {
             width: 300px;
             height: 200px;
+        }
 
+        .first-drop {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            background: red;
+            position: absolute;
         }
     </style>
 </head>
@@ -44,11 +53,17 @@
     </div>
     <div class="wrap">
         <h3>2.拖拽上传：</h3>
-        <div class="drop-box" id="drop_box"></div>
+        <div class="drop-box" >
+            <div class="first-drop" id="drop_box"></div>
+        </div>
         <div class="preview">预览</div>
-
     </div>
 </div>
-<script type="text/javascript" src="js/uploader.js"></script>
+
+
+<!--<div class="first-drop" id="first_drop"></div>-->
+<script type="text/javascript" src="js/drag.js"></script>
+<!--<script type="text/javascript" src="js/uploader.js"></script>-->
+<script type="text/javascript" src="js/first.js"></script>
 </body>
 </html>
